2008-05-23  Timothy Hatcher  <timothy@apple.com>

        Fixes the bug where the profile was not added when finished.

        <rdar://problem/5958851> Stop Profiling from the Develop menu does
        not add the Profile to the Inspector

        Reviewed by Adam Roben.

        * page/InspectorController.cpp:
        (WebCore::InspectorController::stopUserInitiatedProfiling): Call
        addProfile with the result of stopProfiling.

2008-05-23  Timothy Hatcher  <timothy@apple.com>

        Tweak the Web Insector toolbar look to be smaller when attached to
        the inspected page.

        Reviewed by Adam Roben.

        * page/inspector/inspector.css:

2008-05-23  Simon Hausmann  <hausmann@webkit.org>

        Fix compilation without accessibility by providing an empty stub for
        AXObjectCache::handleAriaRoleChanged.

        * page/AXObjectCache.h:

2008-05-23  Alice Liu  <alice.liu@apple.com>

        Reviewed by Mark Rowe.

        Remove call to function whose body was commented out. Returning the
        children for a menu button by the normal calculation works just as well. 

        * page/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::addChildren):
        * page/AccessibilityRenderObject.h:

2008-05-22  Timothy Hatcher  <timothy@apple.com>

        Fixes the bug where resource would show up multiple times in the
        Inspector. This happened when a resource was used multiple times or
        when the preloader was scanning ahead to fetch resources.

        <rdar://problem/5689373> Cached resources re-appear in Web Inspector
        for each access (18223)

        Reviewed by Adam Roben.

        * page/InspectorController.cpp:
        (WebCore::InspectorController::addResource): Add the URL to m_knownResources.
        (WebCore::InspectorController::removeResource): Remove the URL from m_knownResources
        (WebCore::InspectorController::didLoadResourceFromMemoryCache): If the URL