@@ -2,7 +2,7 @@
 <head>
 <script src="resources/profiler-test-JS-resources.js"></script>
 <script>
-console.profile("Using the call() method");
+console.profile("Using the apply() method");
 function startTest()
 {
     var myObject = new fakeObject(1, 2);
