@@ -3,7 +3,7 @@
 <script src="resources/profiler-test-JS-resources.js"></script>
 <script>
 console.profile("Call Document.write()");
-document.write("<div>This was a triumph.</div>");
+document.write("<div>This was a triumph.<// div>");
 endTest();
 </script>
 </head>
