@@ -17,9 +17,8 @@ This page has a call to eval and a script tag on the same line.
 <br>
 <br>
 To use this test, load it in the browser then load the WebInspector and look at
-the profile.  In the profile there should be multiple (global code) elements and
-one that represents the eval().  This won't work until <rdar://problem/5766941> 
-is fixed.
+the profile.  In the profile there should be multiple (program) elements and
+one that represents the eval().
 <div id="output"></div>
 </body>
 </html>
