@@ -18,6 +18,6 @@ This page has a single script tag with some simple JavaScript.
 <br>
 <br>
 To use this test, load it in the browser then load the WebInspector and look at
-the profile.  In the profile you should see one (global code).
+the profile.  In the profile you should see one (program).
 </body>
 </html>
