@@ -19,8 +19,7 @@ This page has two script tags with some simple JavaScript.
 <br>
 <br>
 To use this test, load it in the browser then load the WebInspector and look at
-the profile.  In the profile there should be two (global code) elements but this
-won't work until <rdar://problem/5766941> is fixed.
+the profile.  In the profile there should be two (program) elements.
 </body>
 <script>
 function testEnd() {
